grammar.js
        program: $ => prec(1, seq(
            optional($.weave_body),
            repeat(
                choice(
                    $.knot,
                    $.function
                )
            )
        )),

        block_comment: $ => token(seq(
            /\/\*/,
            repeat(choice(
                /[^*]/,
                /\*[^/]/
            )),
            /\*\//,
        )),

        knot: $ => seq(
            $.knot_header,
            optional(field("body", $.weave_body)),
            repeat(
                field("stitch", $.stitch)
            )
        ),
        knot_header: $ => seq(
            $.knot_start,
            optional(/=+/),
            field("name", $.identifier),
            optional(field("parameters", $.parameter_list)),
            optional(/=+/),
            $.line_end
        ),

        stitch: $ => seq(
            $.stitch_header,
            optional(field("body", $.weave_body)), // actually not optional
        ),
        stitch_header: $ => seq(
            $.stitch_start,
            field("name", $.identifier),
            optional(field("parameters", $.parameter_list)),
            $.line_end,
        ),

        weave_body: $ => prec.right(repeat1(
            choice(
                $.weave_body_line,
                $.var_line,
                $.const_line,
                $.list_line,
                $.include_line,
                $.external_line,
                $.todo_line,
                $.empty_line
            )
        )),
        weave_body_line: $ => seq(
            $.line_start,
            optional(choice(
                $.option_text,
                $.code_text,
                $.dialog_text,
                $.gather_text,
            )),
            $.line_end
        ),

        function: $ => seq(
            $.function_header,
            optional(field("body", $.weave_body)) // actually not optional
        ),

        gather_text: $ => seq(
            field("marker", $.gather_mark),
            optional(field("label", $.label)),
            optional(field("content", $.dialog_text))
        ),
        gather_mark: $ => repeat1(
            /-/,
        ),

        option_text: $ => seq(
            field("marker", $.choice_marker),
            optional(choice(
                seq(
                    field("label", $.label),
                    optional($.choice_label_continuation),
                    repeat(seq(
                        field("condition", $.choice_condition),
                        optional($.choice_condition_continuation),
                    )),
                ),
                repeat1(seq(
                    field("condition", $.choice_condition),
                    optional($.choice_condition_continuation),
                )),
            )),
            optional(field("content", $.choice_content)),
            optional(field("target", choice($.divert_or_thread, $.default_option_mark))),
        ),
        choice_marker: $ => choice(
            $.once_choice_marker,
            $.sticky_choice_marker,
        ),
        once_choice_marker: $ => repeat1(/\*/),
        sticky_choice_marker: $ => repeat1(/\+/),
        choice_content: $ => choice(
            field("shared", $.shared_choice_text),
            seq(
                optional(field("shared", $.shared_choice_text)),
                $.hide_start,
                optional(field("choice_only", $.choice_text)),
                $.hide_end,
                optional(field("output_only", $.choice_text)),
            ),
        ),
        shared_choice_text: $ => seq(
            choice(
                $.escaped_character,
                $.glue,
                $.tag,
                $.vocabulary,
                $.shared_choice_text_other,
            ),
            repeat(choice(
                $.escaped_character,
                $.glue,
                $.inline_block,
                $.tag,
                $.vocabulary,
                $.choice_text_other,
            )),
        ),
        choice_text: $ => repeat1(choice(
            $.escaped_character,
            $.glue,
            $.inline_block,
            $.tag,
            $.vocabulary,
            $.choice_text_other,
        )),
        choice_text_other: $ => prec.right(repeat1(/[^\s\\\n\r\p{N}\p{L}\[\]_#]/)),
        default_option_mark: $ => $.arrow,

        divert_or_thread: $ => choice(
            $.divert_chain,
            $.thread
        ),

        var_line: $ => seq(
            $.var_start,
            field("name", $.identifier),
            field("operator", $.assignment),
            field("value", $.expression),
            $.line_end
        ),
        const_line: $ => seq(
            $.const_start,
            field("name", $.identifier),
            field("operator", $.assignment),
            field("value", $.expression),
            $.line_end
        ),
        list_line: $ => seq(
            $.list_start,
            field("name", $.identifier),
            field("operator", $.assignment),
            field("value", $.list_definition),
            $.line_end
        ),
        list_definition: $ => seq(
            $.list_definition_item,
            repeat(
                seq(
                    /,/,
                    $.list_definition_item
                )
            ),
        ),

        list_definition_item: $ => choice(
            seq(
                field("name", $.identifier),
                optional(seq(
                    field("operator", $.assignment),
                    field("value", $.signed_integer),
                )),
            ),
            seq(
                $.mark_start,
                field("name", $.identifier),
                $.mark_end,
                optional(seq(
                    field("operator", $.assignment),
                    field("value", $.signed_integer),
                )),
            ),
            seq(
                $.mark_start,
                field("name", $.identifier),
                field("operator", $.assignment),
                field("value", $.signed_integer),
                $.mark_end,
            ),
        ),
        mark_start: $ => /\(/,
        mark_end: $ => /\)/,

        dialog_text: $ => choice(
            $.condition_text,
            $.text,
            $.divert_or_thread,
            repeat1($.tag),
            seq($.text, $.divert_or_thread),
            seq($.text, repeat1($.tag))
        ),
        text: $ => repeat1(choice(
            $.escaped_character,
            $.glue,
            $.inline_block,
            $.vocabulary,
            $.other,
        )),

        hide_start: $ => /\[/,
        hide_end: $ => /\]/,

        divert_chain: $ => choice(
            $.divert_return,
            seq(
                repeat1(
                    $.divert
                ),
                optional($.divert_continue),
                optional($.divert_return)
            )
        ),
        divert: $ => seq(
            $.arrow,
            field("target", choice($.end_destination, $.done_destination, $.identifier_path)),
            optional(field("arguments", $.call_arguments)),
        ),
        divert_continue: $ => $.arrow,
        divert_return: $ => seq(
            $.double_arrow,
            optional(seq(
                field("target", $.identifier_path),
                optional(field("arguments", $.call_arguments)),
            )),
        ),
        function_header: $ => seq(
            $.function_start,
            optional(/=+/),
            field("name", $.identifier),
            optional(field("parameters", $.parameter_list)),
            optional(/=+/),
            $.line_end
        ),

        parameter_list: $ => seq(
            /\(/,
            optional($.parameters),
            /\)/,
        ),
        parameters: $ => seq(
            $.parameter,
            repeat(
                seq(
                    /,/,
                    $.parameter
                )
            ),
            optional(/,/),
        ),
        parameter: $ => seq(
            optional($.ref),
            optional($.arrow),
            $.identifier
        ),
        condition_text: $ => seq(
            $.condition_block,
            optional($.text)
        ),

        condition_block: $ => choice(
            $.multiline_sequence,
            $.multiline_switch,
            $.multiline_if,
            $.multiline_conditional,
        ),
        inline_block: $ => choice(
            $.inline_conditional,
            $.inline_sequence,
            $.inline_expression,
        ),
        inline_expression: $ => prec(3, seq(
            $.inline_expression_start,
            field("value", $.expression),
            /\}/,
        )),
        inline_conditional: $ => prec(4, seq(
            $.inline_conditional_start,
            field("condition", $.expression),
            /:/,
            field("consequence", optional($.inline_content)),
            optional(seq(/\|/, field("alternative", optional($.inline_content)))),
            /\}/,
        )),
        inline_content: $ => repeat1(choice(
            $.escaped_character,
            $.glue,
            $.inline_block,
            $.divert_or_thread,
            $.tag,
            $.vocabulary,
            $.inline_text_other,
        )),
        identifier_path: $ => seq(
            $.identifier,
            optional(repeat1(seq(
                $.dot,
                $.identifier
            )))
        ),

        tag: $ => seq(
            /#/,
            repeat1(choice(
                $.escaped_character,
                $.inline_block,
                $.tag_text,
            )),
        ),
        tag_text: $ => /[^#\\\{\}\[\]\r\n]+/,

        expression: $ => choice(
            $.binary_expression,
            $.unary_expression,
            $.postfix_expression,
            $.call_expression,
            $.divert_target_value,
            $.list_value,
            $.parenthesized_expression,
            $.reference,
            $.boolean,
            $.string,
            $.float,
            $.number,
        ),
        reference: $ => $.identifier_path,
        number: $ => /\d+/,
        assignment: $ => /=/,
        dot: $ => /\./,
        block_remainder: $ => /[^\r\n\}\{]+/,
        vocabulary: $ => /[\p{N}\p{L}_-]+/,
        identifier: $ => token(new RegExp(`${ID_CHAR}*${ID_NON_DIGIT}${ID_CHAR}*`, "u")),
        // Single character catch-all in the form /[]+/ would be to
        // greedy, these are meant to catch punctionation. Therefore we use
        // prec.right(repeat1(/[]/)).
        other: $ => prec.right(repeat1(/[^\s\\\n\r\p{N}\p{L}_]/)),

    }
})
