test/corpus/basics.txt
===========
Single knot
===========

=== teäst ===

--------------------------------------------------------------------------------

(program
  (weave_body
    (empty_line))
  (knot
    (knot_header
      (knot_start)
      (identifier)
      (line_end))))

===========
Next knot
===========

=== test ===
=== test ===

--------------------------------------------------------------------------------

(program
  (weave_body
    (empty_line))
  (knot
    (knot_header
      (knot_start)
      (identifier)
      (line_end)))
  (knot
    (knot_header
      (knot_start)
      (identifier)
      (line_end))))

=================
Knot and stitches
=================

=== test ===
=== test ===
 = test
asd
 = test
asd

--------------------------------------------------------------------------------

(program
  (weave_body
    (empty_line))
  (knot
    (knot_header
      (knot_start)
      (identifier)
      (line_end)))
  (knot
    (knot_header
      (knot_start)
      (identifier)
      (line_end))
    (stitch
      (stitch_header
        (stitch_start)
        (identifier)
        (line_end))
      (weave_body
        (weave_body_line
          (line_start)
          (dialog_text
            (text
              (vocabulary)))
          (line_end))))
    (stitch
      (stitch_header
        (stitch_start)
        (identifier)
        (line_end))
      (weave_body
        (weave_body_line
          (line_start)
          (dialog_text
            (text
              (vocabulary)))
          (line_end))))))

=====================
Knot with simple body
=====================

=== test ===
body
=== test ===

--------------------------------------------------------------------------------

(program
  (weave_body
    (empty_line))
  (knot
    (knot_header
      (knot_start)
      (identifier)
      (line_end))
    (weave_body
      (weave_body_line
        (line_start)
        (dialog_text
          (text
            (vocabulary)))
        (line_end))))
  (knot
    (knot_header
      (knot_start)
      (identifier)
      (line_end))))

======
Divert
======

asdf-sdf -> test
=== test ===
test -> test.bla

--------------------------------------------------------------------------------

(program
  (weave_body
    (empty_line)
    (weave_body_line
      (line_start)
      (dialog_text
        (text
          (vocabulary))
        (divert_or_thread
          (divert_chain
            (divert
              (arrow)
              (identifier_path
                (identifier))))))
      (line_end)))
  (knot
    (knot_header
      (knot_start)
      (identifier)
      (line_end))
    (weave_body
      (weave_body_line
        (line_start)
        (dialog_text
          (text
            (vocabulary))
          (divert_or_thread
            (divert_chain
              (divert
                (arrow)
                (identifier_path
                  (identifier)
                  (dot)
                  (identifier))))))
        (line_end)))))

================
Illegal divert 1
================

asdsdf -> test.bla asdf
=== huhu ===

--------------------------------------------------------------------------------

(program
  (weave_body
    (empty_line)
    (weave_body_line
      (line_start)
      (dialog_text
        (text
          (vocabulary))
        (divert_or_thread
          (divert_chain
            (divert
              (arrow)
              (identifier_path
                (identifier)
                (dot)
                (identifier))))))
      (ERROR
        (UNEXPECTED 's'))
      (line_end)))
  (knot
    (knot_header
      (knot_start)
      (identifier)
      (line_end))))

================
Illegal divert 2
================

asdsdf ->
=== huhu ===

--------------------------------------------------------------------------------

(program
  (weave_body
    (empty_line)
    (weave_body_line
      (line_start)
      (dialog_text
        (text
          (vocabulary)))
      (ERROR
        (arrow))
      (line_end)))
  (knot
    (knot_header
      (knot_start)
      (identifier)
      (line_end))))

===========
End newline
===========

=== teet ===


--------------------------------------------------------------------------------

(program
  (weave_body
    (empty_line))
  (knot
    (knot_header
      (knot_start)
      (identifier)
      (line_end))
    (weave_body
      (empty_line))))

=========
End space
=========

=== teet ===
 

--------------------------------------------------------------------------------

(program
  (weave_body
    (empty_line))
  (knot
    (knot_header
      (knot_start)
      (identifier)
      (line_end))
    (weave_body
      (empty_line))))

==========
Empty line
==========

=== teet ===
a

b

--------------------------------------------------------------------------------

(program
  (weave_body
    (empty_line))
  (knot
    (knot_header
      (knot_start)
      (identifier)
      (line_end))
    (weave_body
      (weave_body_line
        (line_start)
        (dialog_text
          (text
            (vocabulary)))
        (line_end))
      (empty_line)
      (weave_body_line
        (line_start)
        (dialog_text
          (text
            (vocabulary)))
        (line_end)))))

=============
Spaces at end
=============
a 

--------------------------------------------------------------------------------

(program
  (weave_body
    (weave_body_line
      (line_start)
      (dialog_text
        (text
          (vocabulary)))
      (line_end))))

========
Function
========

=== function asd() ===
a


a

--------------------------------------------------------------------------------

(program
  (weave_body
    (empty_line))
  (function
    (function_header
      (function_start)
      (identifier)
      (parameter_list)
      (line_end))
    (weave_body
      (weave_body_line
        (line_start)
        (dialog_text
          (text
            (vocabulary)))
        (line_end))
      (empty_line)
      (empty_line)
      (weave_body_line
        (line_start)
        (dialog_text
          (text
            (vocabulary)))
        (line_end)))))

===============
Function spaces
===============

=== function asd ( asd , sd ) ===
a

--------------------------------------------------------------------------------

(program
  (weave_body
    (empty_line))
  (function
    (function_header
      (function_start)
      (identifier)
      (parameter_list
        (parameters
          (parameter
            (identifier))
          (parameter
            (identifier))))
      (line_end))
    (weave_body
      (weave_body_line
        (line_start)
        (dialog_text
          (text
            (vocabulary)))
        (line_end)))))

=====================
Function space at end
=====================

=== function asd ( asd , sd ) 
a
--------------------------------------------------------------------------------

(program
  (weave_body
    (empty_line))
  (function
    (function_header
      (function_start)
      (identifier)
      (parameter_list
        (parameters
          (parameter
            (identifier))
          (parameter
            (identifier))))
      (line_end))
    (weave_body
      (weave_body_line
        (line_start)
        (dialog_text
          (text
            (vocabulary)))
        (line_end)))))

=======
Numbers
=======

11
1
=== 1sadf ===

--------------------------------------------------------------------------------

(program
  (weave_body
    (empty_line)
    (weave_body_line
      (line_start)
      (dialog_text
        (text
          (vocabulary)))
      (line_end))
    (weave_body_line
      (line_start)
      (dialog_text
        (text
          (vocabulary)))
      (line_end)))
  (knot
    (knot_header
      (knot_start)
      (identifier)
      (line_end))))

======
Colons
======

1:
=== test ====
- 1:

--------------------------------------------------------------------------------

(program
  (weave_body
    (empty_line)
    (weave_body_line
      (line_start)
      (dialog_text
        (text
          (vocabulary)
          (other)))
      (line_end)))
  (knot
    (knot_header
      (knot_start)
      (identifier)
      (line_end))
    (weave_body
      (weave_body_line
        (line_start)
        (gather_text
          (gather_mark)
          (dialog_text
            (text
              (vocabulary)
              (other))))
        (line_end)))))

=====================
Condition text (TODO)
=====================

 {test:
asdf
 }

--------------------------------------------------------------------------------

(program
  (weave_body
    (empty_line)
    (weave_body_line
      (line_start)
      (dialog_text
        (condition_text
          (condition_block
            (block_brace_start)
            (condition_block_content
              (block_remainder))
            (line_end)
            (line_start)
            (condition_block_content
              (block_remainder))
            (line_end)
            (line_start))))
      (line_end))))

=========================
Condition text rem (TODO)
=========================

{test:
asdf
} rest

--------------------------------------------------------------------------------

(program
  (weave_body
    (empty_line)
    (weave_body_line
      (line_start)
      (dialog_text
        (condition_text
          (condition_block
            (block_brace_start)
            (condition_block_content
              (block_remainder))
            (line_end)
            (line_start)
            (condition_block_content
              (block_remainder))
            (line_end)
            (line_start))
          (text
            (vocabulary))))
      (line_end))))

==========================
Condition text nest (TODO)
==========================

{test:
  - {test2:
  asdf
  }
}

--------------------------------------------------------------------------------

(program
  (weave_body
    (empty_line)
    (weave_body_line
      (line_start)
      (dialog_text
        (condition_text
          (condition_block
            (block_brace_start)
            (condition_block_content
              (block_remainder))
            (line_end)
            (line_start)
            (condition_block_content
              (block_remainder)
              (condition_block
                (condition_block
                  (block_brace_start)
                  (condition_block_content
                    (block_remainder))
                  (line_end)
                  (line_start)
                  (condition_block_content
                    (block_remainder))
                  (line_end)
                  (line_start))))
            (line_end)
            (line_start))))
      (line_end))))

=================================
Condition text nest inline (TODO)
=================================

{test:
  {test2:asdf}
}

--------------------------------------------------------------------------------

(program
  (weave_body
    (empty_line)
    (weave_body_line
      (line_start)
      (dialog_text
        (condition_text
          (condition_block
            (block_brace_start)
            (condition_block_content
              (block_remainder))
            (line_end)
            (line_start)
            (condition_block_content
              (inline_block
                (inline_conditional
                  (inline_conditional_start)
                  (expression
                    (reference
                      (identifier_path
                        (identifier))))
                  (inline_content
                    (vocabulary)))))
            (line_end)
            (line_start))))
      (line_end))))

===========
Multidivert
===========

->a
->a->
->a->b->c.d
->a->->
->->
->a->b->c->->

--------------------------------------------------------------------------------

(program
  (weave_body
    (empty_line)
    (weave_body_line
      (line_start)
      (dialog_text
        (divert_or_thread
          (divert_chain
            (divert
              (arrow)
              (identifier_path
                (identifier))))))
      (line_end))
    (weave_body_line
      (line_start)
      (dialog_text
        (divert_or_thread
          (divert_chain
            (divert
              (arrow)
              (identifier_path
                (identifier)))
            (divert_continue
              (arrow)))))
      (line_end))
    (weave_body_line
      (line_start)
      (dialog_text
        (divert_or_thread
          (divert_chain
            (divert
              (arrow)
              (identifier_path
                (identifier)))
            (divert
              (arrow)
              (identifier_path
                (identifier)))
            (divert
              (arrow)
              (identifier_path
                (identifier)
                (dot)
                (identifier))))))
      (line_end))
    (weave_body_line
      (line_start)
      (dialog_text
        (divert_or_thread
          (divert_chain
            (divert
              (arrow)
              (identifier_path
                (identifier)))
            (divert_return
              (double_arrow)))))
      (line_end))
    (weave_body_line
      (line_start)
      (dialog_text
        (divert_or_thread
          (divert_chain
            (divert_return
              (double_arrow)))))
      (line_end))
    (weave_body_line
      (line_start)
      (dialog_text
        (divert_or_thread
          (divert_chain
            (divert
              (arrow)
              (identifier_path
                (identifier)))
            (divert
              (arrow)
              (identifier_path
                (identifier)))
            (divert
              (arrow)
              (identifier_path
                (identifier)))
            (divert_return
              (double_arrow)))))
      (line_end))))

===
VAR
===

VAR huhu = 1
=== huhu ===
VAR huhu = 1
= huhu
VAR huhu = 1
=== function sdf() ===
VAR huhu = 1

--------------------------------------------------------------------------------

(program
  (weave_body
    (empty_line)
    (var_line
      (var_start)
      (identifier)
      (assignment)
      (expression
        (number))
      (line_end)))
  (knot
    (knot_header
      (knot_start)
      (identifier)
      (line_end))
    (weave_body
      (var_line
        (var_start)
        (identifier)
        (assignment)
        (expression
          (number))
        (line_end)))
    (stitch
      (stitch_header
        (stitch_start)
        (identifier)
        (line_end))
      (weave_body
        (var_line
          (var_start)
          (identifier)
          (assignment)
          (expression
            (number))
          (line_end)))))
  (function
    (function_header
      (function_start)
      (identifier)
      (parameter_list)
      (line_end))
    (weave_body
      (var_line
        (var_start)
        (identifier)
        (assignment)
        (expression
          (number))
        (line_end)))))

=====
CONST
=====

CONST huhu = 1
=== huhu ===
CONST huhu = 1
= huhu
CONST huhu = 1
=== function sdf() ===
CONST huhu = 1

--------------------------------------------------------------------------------

(program
  (weave_body
    (empty_line)
    (const_line
      (const_start)
      (identifier)
      (assignment)
      (expression
        (number))
      (line_end)))
  (knot
    (knot_header
      (knot_start)
      (identifier)
      (line_end))
    (weave_body
      (const_line
        (const_start)
        (identifier)
        (assignment)
        (expression
          (number))
        (line_end)))
    (stitch
      (stitch_header
        (stitch_start)
        (identifier)
        (line_end))
      (weave_body
        (const_line
          (const_start)
          (identifier)
          (assignment)
          (expression
            (number))
          (line_end)))))
  (function
    (function_header
      (function_start)
      (identifier)
      (parameter_list)
      (line_end))
    (weave_body
      (const_line
        (const_start)
        (identifier)
        (assignment)
        (expression
          (number))
        (line_end)))))

==============
Block commment
==============

test /* asdf */ bla
=== /** other* */ hello ===

--------------------------------------------------------------------------------

(program
  (weave_body
    (empty_line)
    (weave_body_line
      (line_start)
      (dialog_text
        (text
          (vocabulary)
          (block_comment)
          (vocabulary)))
      (line_end)))
  (knot
    (knot_header
      (knot_start)
      (block_comment)
      (identifier)
      (line_end))))

===================
Block commment nest
===================

test /* asdf /* test */ */ bla

--------------------------------------------------------------------------------

(program
  (weave_body
    (empty_line)
    (weave_body_line
      (line_start)
      (dialog_text
        (text
          (vocabulary)
          (block_comment)
          (other)
          (vocabulary)))
      (line_end))))

============
Line comment
============

asdf // asdf
CONST test = 1

--------------------------------------------------------------------------------

(program
  (weave_body
    (empty_line)
    (weave_body_line
      (line_start)
      (dialog_text
        (text
          (vocabulary)))
      (line_comment)
      (line_end))
    (const_line
      (const_start)
      (identifier)
      (assignment)
      (expression
        (number))
      (line_end))))

====
LIST
====

LIST HuHu = HuHa, (HuHe)
--------------------------------------------------------------------------------

(program
  (weave_body
    (empty_line)
    (list_line
      (list_start)
      (identifier)
      (assignment)
      (list_definition
        (list_definition_item
          (identifier))
        (list_definition_item
          (mark_start)
          (identifier)
          (mark_end)))
      (line_end))))

============
Inline block
============

asdf {teer} asdf

--------------------------------------------------------------------------------

(program
  (weave_body
    (empty_line)
    (weave_body_line
      (line_start)
      (dialog_text
        (text
          (vocabulary)
          (inline_block
            (inline_expression
              (inline_expression_start)
              (expression
                (reference
                  (identifier_path
                    (identifier))))))
          (vocabulary)))
      (line_end))))

===================
Inline block nested
===================

asdf {teer:{test:asdf|asdf}|asd} asdf

--------------------------------------------------------------------------------

(program
  (weave_body
    (empty_line)
    (weave_body_line
      (line_start)
      (dialog_text
        (text
          (vocabulary)
          (inline_block
            (inline_conditional
              (inline_conditional_start)
              (expression
                (reference
                  (identifier_path
                    (identifier))))
              (inline_content
                (inline_block
                  (inline_conditional
                    (inline_conditional_start)
                    (expression
                      (reference
                        (identifier_path
                          (identifier))))
                    (inline_content
                      (vocabulary))
                    (inline_content
                      (vocabulary)))))
              (inline_content
                (vocabulary))))
          (vocabulary)))
      (line_end))))

====
Hide
====

* [Hide] me

--------------------------------------------------------------------------------

(program
  (weave_body
    (empty_line)
    (weave_body_line
      (line_start)
      (option_text
        (choice_marker
          (once_choice_marker))
        (choice_content
          (hide_start)
          (choice_text
            (vocabulary))
          (hide_end)
          (choice_text
            (vocabulary))))
      (line_end))))

============
Hide problem
============

+ [<b>◉</b> Beschreibung] ->e->Schau->Basis

--------------------------------------------------------------------------------

(program
  (weave_body
    (empty_line)
    (weave_body_line
      (line_start)
      (option_text
        (choice_marker
          (sticky_choice_marker))
        (choice_content
          (hide_start)
          (choice_text
            (choice_text_other)
            (vocabulary)
            (choice_text_other)
            (vocabulary)
            (choice_text_other)
            (vocabulary))
          (hide_end))
        (divert_or_thread
          (divert_chain
            (divert
              (arrow)
              (identifier_path
                (identifier)))
            (divert
              (arrow)
              (identifier_path
                (identifier)))
            (divert
              (arrow)
              (identifier_path
                (identifier))))))
      (line_end))))

==============
Default option
==============

* ->
* asdf ->

--------------------------------------------------------------------------------

(program
  (weave_body
    (empty_line)
    (weave_body_line
      (line_start)
      (option_text
        (choice_marker
          (once_choice_marker))
        (default_option_mark
          (arrow)))
      (line_end))
    (weave_body_line
      (line_start)
      (option_text
        (choice_marker
          (once_choice_marker))
        (choice_content
          (shared_choice_text
            (vocabulary)))
        (default_option_mark
          (arrow)))
      (line_end))))

==========
Option bug
==========

** huhu
* * huhu

--------------------------------------------------------------------------------

(program
  (weave_body
    (empty_line)
    (weave_body_line
      (line_start)
      (option_text
        (choice_marker
          (once_choice_marker))
        (choice_content
          (shared_choice_text
            (vocabulary))))
      (line_end))
    (weave_body_line
      (line_start)
      (option_text
        (choice_marker
          (once_choice_marker))
        (choice_content
          (shared_choice_text
            (vocabulary))))
      (line_end))))

====
Tags
====

#tag: text

--------------------------------------------------------------------------------

(program
  (weave_body
    (empty_line)
    (weave_body_line
      (line_start)
      (dialog_text
        (tag
          (tag_text)))
      (line_end))))

====
Glue
====

<> asdf
asdf <> asdf
* asdf <> asd

--------------------------------------------------------------------------------

(program
  (weave_body
    (empty_line)
    (weave_body_line
      (line_start)
      (dialog_text
        (text
          (glue)
          (vocabulary)))
      (line_end))
    (weave_body_line
      (line_start)
      (dialog_text
        (text
          (vocabulary)
          (glue)
          (vocabulary)))
      (line_end))
    (weave_body_line
      (line_start)
      (option_text
        (choice_marker
          (once_choice_marker))
        (choice_content
          (shared_choice_text
            (vocabulary)
            (glue)
            (vocabulary))))
      (line_end))))
